--- a/data/samples/sample_selection_within_same_tract.ipynb
+++ b/data/samples/sample_selection_within_same_tract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,8 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035110106\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035110106\" #49035110106 (ski)\n",
+    "ORIG_TRACT = \"49035101402\"#49057201900 (weber) #49035980000 (airport)\n",
+    "DEST_TRACT = \"49035101402\" #49035110106 (ski)\n",
     "# 49035114000 (center)\n",
     "# 49035101402 (U of U)\n",
     "MONTHS = ['Jan',\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -86,29 +86,7 @@
       "\n",
       "=== Processing month Jan ===\n",
       "\n",
-      "=== Processing month Feb ===\n",
-      "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n",
-      "\n",
-      "=== Processing month May ===\n",
-      "\n",
-      "=== Processing month Jun ===\n",
-      "\n",
-      "=== Processing month Jul ===\n",
-      "\n",
-      "=== Processing month Aug ===\n",
-      "\n",
-      "=== Processing month Sep ===\n",
-      "\n",
-      "=== Processing month Oct ===\n",
-      "\n",
-      "=== Processing month Nov ===\n",
-      "\n",
-      "=== Processing month Dec ===\n",
-      "Before OD filter, linked trips: 5224913\n",
-      "Fixed OD distance (mile): 0.00\n"
+      "=== Processing month Feb ===\n"
      ]
     }
    ],
@@ -225,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -267,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c99013d5",
    "metadata": {},
    "outputs": [],
