--- a/data/samples/sample_selection_Jan_all.ipynb
+++ b/data/samples/sample_selection_Jan_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,19 +48,21 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035101402\"#49057201900 (weber) #49035980000 (airport)\n",
-    "DEST_TRACT = \"49035101402\" #49035110106 (ski)\n",
+    "ORIG_TRACT = \"49035114000\"#49057201900 (weber) \n",
+    "DEST_TRACT = \"49035980000\" \n",
     "# 49035114000 (center)\n",
+    "# 49035980000 (airport)\n",
+    "# 49035110106 (Canyon)\n",
     "# 49035101402 (U of U)\n",
-    "MONTHS = ['Jan',\n",
-    "          'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
-    "          'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+    "MONTHS = ['Jan']\n",
+    "        #   'Feb', 'Mar', 'Apr', 'May', 'Jun',\n",
+    "        #   'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
     "OUTPUT_CSV = f\"{ORIG_TRACT}_to_{DEST_TRACT}.csv\"\n",
     "OUTPUT_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.json\"\n",
     "\n",
-    "KEEP_FACTOR = 2.5   # OD < 2.5 * max(route_dist) -> DROP\n",
+    "# KEEP_FACTOR = 2.5   # OD < 2.5 * max(route_dist) -> DROP\n",
     "\n",
-    "MAX_SAMPLES = 3\n",
+    "# MAX_SAMPLES = 3\n",
     "\n",
     "\n"
    ]
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -86,12 +88,8 @@
      "text": [
       "\n",
       "=== Processing month Jan ===\n",
-      "\n",
-      "=== Processing month Feb ===\n",
-      "\n",
-      "=== Processing month Mar ===\n",
-      "\n",
-      "=== Processing month Apr ===\n"
+      "Before OD filter, linked trips: 2751633\n",
+      "Fixed OD distance (mile): 5.46\n"
      ]
     }
    ],
@@ -158,12 +156,12 @@
     "        .agg(set)\n",
     "    )\n",
     "\n",
-    "    valid_linked_ids = mode_sets[\n",
-    "        (mode_sets.apply(len) >= 2) &\n",
-    "        (mode_sets != {\"car\"})\n",
-    "    ].index\n",
+    "    # valid_linked_ids = mode_sets[\n",
+    "    #     (mode_sets.apply(len) >= 2) &\n",
+    "    #     (mode_sets != {\"car\"})\n",
+    "    # ].index\n",
     "\n",
-    "    df_month = df_month[df_month[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
+    "    # df_month = df_month[df_month[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
     "    # ✅ ADD duration_min HERE (row-level, month scope)\n",
     "    df_month[\"duration_min\"] = (\n",
     "        df_month[\"local_datetime_end\"] - df_month[\"local_datetime_start\"]\n",
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
@@ -217,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After OD filter, linked trips: 0\n"
+      "After OD filter, linked trips: 2751633\n"
      ]
     }
    ],
@@ -238,12 +236,12 @@
     ")\n",
     "\n",
     "# 删除：只要有一条 trip > 2.5 * OD_DIST_MILE\n",
-    "valid_linked_ids = network_max.loc[\n",
-    "    network_max[\"max_network_dist\"] <= KEEP_FACTOR * OD_DIST_MILE,\n",
-    "    \"linked_trip_id\"\n",
-    "]\n",
+    "# valid_linked_ids = network_max.loc[\n",
+    "#     network_max[\"max_network_dist\"] <= KEEP_FACTOR * OD_DIST_MILE,\n",
+    "#     \"linked_trip_id\"\n",
+    "# ]\n",
     "\n",
-    "df = df[df[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
+    "# df = df[df[\"linked_trip_id\"].isin(valid_linked_ids)]\n",
     "\n",
     "print(\"After OD filter, linked trips:\", df[\"linked_trip_id\"].nunique())\n"
    ]
@@ -578,7 +576,7 @@
     "    key=lambda lt: -lt[\"weight\"]\n",
     ")\n",
     "\n",
-    "linked_trips_final = linked_trips_sorted[:MAX_SAMPLES]\n",
+    "linked_trips_final = linked_trips_sorted\n",
     "\n",
     "# =========================\n",
     "# 5️⃣ OD TRACT → GEOJSON（原逻辑）\n",
