--- a/data/samples/sample_selection_Jan_all.ipynb
+++ b/data/samples/sample_selection_Jan_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -48,8 +48,8 @@
     "TRACT_SHP = f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/2-OD patterns by census track/six_counties_track.shp\"\n",
     "\n",
     "# airport -> central city (example)\n",
-    "ORIG_TRACT = \"49035980000\"#49057201900 (weber) \n",
-    "DEST_TRACT = \"49035101402\" \n",
+    "ORIG_TRACT = \"49035114000\"#49057201900 (weber) \n",
+    "DEST_TRACT = \"49035110106\" \n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (Canyon)\n",
@@ -530,8 +530,8 @@
     "    trips_sorted = sorted(trips, key=lambda x: x[\"start_time\"])\n",
     "\n",
     "    # 至少 2 个 leg 才有 transfer\n",
-    "    if len(trips_sorted) < 2:\n",
-    "        continue\n",
+    "    # if len(trips_sorted) < 2:\n",
+    "    #     continue\n",
     "    # ② 🔑 给每个 leg 明确一个顺序索引（前端用）\n",
     "    for i, t in enumerate(trips_sorted):\n",
     "        t[\"leg_index\"] = i\n",
