--- a/data/samples/sample_selection_Jan_all.ipynb
+++ b/data/samples/sample_selection_Jan_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 131,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 132,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "\n",
     "# airport -> central city (example)\n",
     "ORIG_TRACT = \"49035114000\"#49057201900 (weber) \n",
-    "DEST_TRACT = \"49035110106\" \n",
+    "DEST_TRACT = \"49035101402\" \n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (Canyon)\n",
@@ -458,12 +458,14 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "from datetime import datetime\n",
+    "from datetime import datetime, timedelta\n",
     "from collections import defaultdict\n",
     "from shapely.geometry import mapping\n",
+    "\n",
     "MAX_SAMPLES = 5\n",
+    "\n",
     "# =========================\n",
-    "# 1️⃣ BUILD ALL LEG SAMPLES（不变）\n",
+    "# 1️⃣ BUILD ALL LEG SAMPLES（仅补 end_time）\n",
     "# =========================\n",
     "\n",
     "samples = []\n",
@@ -476,12 +478,22 @@
     "    o_lon, o_lat = safe_decode_geohash(r.geohash7_orig)\n",
     "    d_lon, d_lat = safe_decode_geohash(r.geohash7_dest)\n",
     "\n",
+    "    start_dt = r.local_datetime_start\n",
+    "    duration = clean_num(r.duration_min)\n",
+    "\n",
+    "    end_dt = (\n",
+    "        start_dt + timedelta(minutes=duration)\n",
+    "        if start_dt is not None and duration is not None\n",
+    "        else None\n",
+    "    )\n",
+    "\n",
     "    samples.append({\n",
     "        \"id\": str(r.trip_id),\n",
     "        \"mode\": str(r.travel_mode).lower().strip(),\n",
     "        \"route\": route,\n",
-    "        \"start_time\": to_iso(r.local_datetime_start),\n",
-    "        \"duration_min\": clean_num(r.duration_min),\n",
+    "        \"start_time\": to_iso(start_dt),\n",
+    "        \"end_time\": to_iso(end_dt),              # ✅ 新增\n",
+    "        \"duration_min\": duration,\n",
     "        \"network_distance_km\": clean_num(r.network_distance),\n",
     "        \"route_distance_km\": clean_num(r.route_distance),\n",
     "        \"origin\": {\n",
@@ -511,7 +523,7 @@
     "    })\n",
     "\n",
     "# =========================\n",
-    "# 2️⃣ GROUP BY linked_trip（⚠️ 关键：在 sampling 之前）\n",
+    "# 2️⃣ GROUP BY linked_trip（不变）\n",
     "# =========================\n",
     "\n",
     "linked_groups = defaultdict(list)\n",
@@ -519,30 +531,28 @@
     "    linked_groups[s[\"meta\"][\"linked_trip_id\"]].append(s)\n",
     "\n",
     "# =========================\n",
-    "# 3️⃣ BUILD FULL linked_trip STRUCTURE（含 transfer）\n",
+    "# 3️⃣ BUILD FULL linked_trip STRUCTURE（仅修 end_time 语义）\n",
     "# =========================\n",
     "\n",
     "linked_trips_full = []\n",
     "\n",
     "for linked_id, trips in linked_groups.items():\n",
     "\n",
-    "    # 按时间 / id 排序\n",
     "    trips_sorted = sorted(trips, key=lambda x: x[\"start_time\"])\n",
     "\n",
-    "    # 至少 2 个 leg 才有 transfer\n",
-    "    # if len(trips_sorted) < 2:\n",
-    "    #     continue\n",
-    "    # ② 🔑 给每个 leg 明确一个顺序索引（前端用）\n",
+    "    # 给每个 leg 顺序索引\n",
     "    for i, t in enumerate(trips_sorted):\n",
     "        t[\"leg_index\"] = i\n",
+    "\n",
     "    origin = {\n",
-    "                **trips_sorted[0][\"origin\"],\n",
-    "                \"start_time\": trips_sorted[0][\"start_time\"]\n",
-    "            }\n",
+    "        **trips_sorted[0][\"origin\"],\n",
+    "        \"start_time\": trips_sorted[0][\"start_time\"]\n",
+    "    }\n",
+    "\n",
     "    destination = {\n",
-    "                    **trips_sorted[-1][\"destination\"],\n",
-    "                    \"end_time\": trips_sorted[-1][\"start_time\"]\n",
-    "                }\n",
+    "        **trips_sorted[-1][\"destination\"],\n",
+    "        \"end_time\": trips_sorted[-1].get(\"end_time\")   # ✅ 修正\n",
+    "    }\n",
     "\n",
     "    transfers = []\n",
     "    for t in trips_sorted[:-1]:\n",
@@ -553,7 +563,6 @@
     "                \"geohash\": t[\"destination\"][\"geohash\"]\n",
     "            })\n",
     "\n",
-    "    # 用最大 weight 代表这个 linked_trip\n",
     "    weight = max(t[\"meta\"][\"weight\"] or 0 for t in trips_sorted)\n",
     "\n",
     "    linked_trips_full.append({\n",
@@ -566,7 +575,7 @@
     "    })\n",
     "\n",
     "# =========================\n",
-    "# 4️⃣ SAMPLE linked_trip（不是 leg！）\n",
+    "# 4️⃣ SAMPLE linked_trip（不变）\n",
     "# =========================\n",
     "\n",
     "linked_trips_sorted = sorted(\n",
@@ -577,7 +586,7 @@
     "linked_trips_final = linked_trips_sorted\n",
     "\n",
     "# =========================\n",
-    "# 5️⃣ OD TRACT → GEOJSON（原逻辑）\n",
+    "# 5️⃣ OD TRACT → GEOJSON（不变）\n",
     "# =========================\n",
     "\n",
     "tracts[\"GEOID\"] = tracts[\"GEOID\"].astype(str)\n",
@@ -603,7 +612,7 @@
     "}\n",
     "\n",
     "# =========================\n",
-    "# 6️⃣ FINAL OUTPUT\n",
+    "# 6️⃣ FINAL OUTPUT（不变）\n",
     "# =========================\n",
     "\n",
     "out = {\n",
