--- a/data/samples/sample_selection_Jan_all.ipynb
+++ b/data/samples/sample_selection_Jan_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 221,
    "id": "6e05f769",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 222,
    "id": "cf937a00",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
     "\n",
     "# airport -> central city (example)\n",
     "ORIG_TRACT = \"49035101402\"#49057201900 (weber) \n",
-    "DEST_TRACT = \"49035980000\" \n",
+    "DEST_TRACT = \"49035110106\" \n",
     "# 49035114000 (center)\n",
     "# 49035980000 (airport)\n",
     "# 49035110106 (Canyon)\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "49cda62c",
    "metadata": {},
    "outputs": [
@@ -87,9 +87,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=== Processing month Jan ===\n",
-      "Before OD filter, linked trips: 2751633\n",
-      "Fixed OD distance (mile): 8.72\n"
+      "=== Processing month Jan ===\n"
      ]
     }
    ],
@@ -207,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "id": "4ed905c2",
    "metadata": {},
    "outputs": [
