--- a/data/samples/sample_selection_Jan_all_removal far connection.ipynb
+++ b/data/samples/sample_selection_Jan_all_removal far connection.ipynb
@@ -611,6 +611,7 @@
     "out = {\n",
     "    \"schema\": \"nova.complete_trip.sample.v2\",\n",
     "    \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "    \"od\": od_info,\n",
     "    \"count\": len(linked_trips_final),\n",
     "    \"linked_trips\": linked_trips_final\n",
     "}\n",
