--- a/data/samples/stats.ipynb
+++ b/data/samples/stats.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "879c3751",
    "metadata": {},
    "outputs": [
@@ -26,6 +26,335 @@
       "After OD (trip-level) filter, rows: 6000\n",
       "Unique linked trips: 5817\n",
       "Stats JSON written to: 49035101402_to_49035101402.stats.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# FAST + ROBUST VERSION\n",
+    "# Build OD-level annual statistics for Complete Trips\n",
+    "# OD defined strictly by Census Tract (GEOID + shapefile)\n",
+    "# Population-level statistics (NOT sampled)\n",
+    "# ============================================================\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import geopandas as gpd\n",
+    "import glob\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "import pygeohash as pgh\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# CONFIG\n",
+    "# =========================\n",
+    "\n",
+    "BASE_DIR = \"C:/Users/rli04/Villanova University/Complete-trip-coordinate - Documents/General\"\n",
+    "PARQUET_DIR = f\"{BASE_DIR}/Salt_Lake/delivery\"\n",
+    "\n",
+    "TRACT_SHP = (\n",
+    "    f\"{BASE_DIR}/Manuscript/Figure/Visualization-RL/\"\n",
+    "    f\"2-OD patterns by census track/six_counties_track.shp\"\n",
+    ")\n",
+    "\n",
+    "TRACT_IDS = [\n",
+    "    \"49035114000\",  # center\n",
+    "    \"49035980000\",  # airport\n",
+    "    \"49035110106\",  # ski\n",
+    "    \"49035101402\"   # U of U\n",
+    "]\n",
+    "\n",
+    "OD_PAIRS = [\n",
+    "    (o, d)\n",
+    "    for o in TRACT_IDS\n",
+    "    for d in TRACT_IDS\n",
+    "    if o != d\n",
+    "]\n",
+    "\n",
+    "MONTHS = [\"Jan\"]\n",
+    "\n",
+    "USE_COLS = [\n",
+    "    \"linked_trip_id\",\n",
+    "    \"travel_mode\",\n",
+    "    \"local_datetime_start\",\n",
+    "    \"local_datetime_end\",\n",
+    "    \"geohash7_orig\",\n",
+    "    \"geohash7_dest\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# 0️⃣ LOAD TRACTS (ONCE)\n",
+    "# =========================\n",
+    "\n",
+    "tracts = gpd.read_file(TRACT_SHP).to_crs(\"EPSG:4326\")\n",
+    "tracts[\"GEOID\"] = tracts[\"GEOID\"].astype(str)\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# 1️⃣ LOAD YEARLY DATA (ONCE)\n",
+    "# =========================\n",
+    "\n",
+    "dfs = []\n",
+    "for m in MONTHS:\n",
+    "    files = glob.glob(f\"{PARQUET_DIR}/Salt_Lake-{m}-2020/*.snappy.parquet\")\n",
+    "    if not files:\n",
+    "        continue\n",
+    "    dfs.append(pd.concat(\n",
+    "        [pd.read_parquet(f, columns=USE_COLS) for f in files],\n",
+    "        ignore_index=True\n",
+    "    ))\n",
+    "\n",
+    "if not dfs:\n",
+    "    raise ValueError(\"No parquet files found.\")\n",
+    "\n",
+    "df = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "df[\"local_datetime_start\"] = pd.to_datetime(df[\"local_datetime_start\"], errors=\"coerce\")\n",
+    "df[\"local_datetime_end\"]   = pd.to_datetime(df[\"local_datetime_end\"], errors=\"coerce\")\n",
+    "\n",
+    "df = df[df[\"local_datetime_end\"] > df[\"local_datetime_start\"]]\n",
+    "df = df[df[\"geohash7_orig\"].notna() & df[\"geohash7_dest\"].notna()]\n",
+    "\n",
+    "df[\"geohash7_orig\"] = df[\"geohash7_orig\"].astype(str)\n",
+    "df[\"geohash7_dest\"] = df[\"geohash7_dest\"].astype(str)\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# 2️⃣ GEOHASH DECODE HELPERS（不变）\n",
+    "# =========================\n",
+    "\n",
+    "def _decode_unique_geohash(series):\n",
+    "    uniq = series.unique()\n",
+    "    mapping = {}\n",
+    "    for gh in uniq:\n",
+    "        try:\n",
+    "            lat, lon = pgh.decode(gh)\n",
+    "            mapping[gh] = (lat, lon)\n",
+    "        except Exception:\n",
+    "            mapping[gh] = (np.nan, np.nan)\n",
+    "    return series.map(mapping).apply(pd.Series).rename(columns={0: \"lat\", 1: \"lon\"})\n",
+    "\n",
+    "\n",
+    "# =========================\n",
+    "# 3️⃣ PRE-COMPUTE FIRST / LAST (ONCE)\n",
+    "# =========================\n",
+    "\n",
+    "df = df[df[\"local_datetime_start\"].notna() & df[\"local_datetime_end\"].notna()]\n",
+    "\n",
+    "idx_first = df.groupby(\"linked_trip_id\")[\"local_datetime_start\"].idxmin()\n",
+    "idx_last  = df.groupby(\"linked_trip_id\")[\"local_datetime_end\"].idxmax()\n",
+    "\n",
+    "first_trips = df.loc[idx_first, [\"linked_trip_id\", \"geohash7_orig\"]].copy()\n",
+    "last_trips  = df.loc[idx_last,  [\"linked_trip_id\", \"geohash7_dest\"]].copy()\n",
+    "\n",
+    "o_latlon = _decode_unique_geohash(first_trips[\"geohash7_orig\"])\n",
+    "d_latlon = _decode_unique_geohash(last_trips[\"geohash7_dest\"])\n",
+    "\n",
+    "first_trips[\"orig_lat\"] = o_latlon[\"lat\"]\n",
+    "first_trips[\"orig_lon\"] = o_latlon[\"lon\"]\n",
+    "last_trips[\"dest_lat\"]  = d_latlon[\"lat\"]\n",
+    "last_trips[\"dest_lon\"]  = d_latlon[\"lon\"]\n",
+    "\n",
+    "first_trips = first_trips.dropna(subset=[\"orig_lat\", \"orig_lon\"])\n",
+    "last_trips  = last_trips.dropna(subset=[\"dest_lat\", \"dest_lon\"])\n",
+    "\n",
+    "# Utils\n",
+    "def haversine_miles(lon1, lat1, lon2, lat2):\n",
+    "    R = 3958.8  # Earth radius in miles\n",
+    "    lon1, lat1, lon2, lat2 = map(\n",
+    "        np.radians, [lon1, lat1, lon2, lat2]\n",
+    "    )\n",
+    "    dlon = lon2 - lon1\n",
+    "    dlat = lat2 - lat1\n",
+    "    a = (\n",
+    "        np.sin(dlat / 2) ** 2\n",
+    "        + np.cos(lat1) * np.cos(lat2) * np.sin(dlon / 2) ** 2\n",
+    "    )\n",
+    "    return 2 * R * np.arcsin(np.sqrt(a))\n",
+    "\n",
+    "\n",
+    "def leg_route_distance_ok(leg, max_dist_miles):\n",
+    "    geom = leg.get(\"route\")\n",
+    "    if not geom or len(geom) < 2:\n",
+    "        return False\n",
+    "\n",
+    "    route_start_lat, route_start_lon = geom[0]\n",
+    "    route_end_lat, route_end_lon = geom[-1]\n",
+    "\n",
+    "    o = leg[\"origin\"]\n",
+    "    d = leg[\"destination\"]\n",
+    "\n",
+    "    if o[\"lat\"] is None or o[\"lon\"] is None:\n",
+    "        return False\n",
+    "    if d[\"lat\"] is None or d[\"lon\"] is None:\n",
+    "        return False\n",
+    "\n",
+    "    dist_o = haversine_miles(\n",
+    "        o[\"lon\"], o[\"lat\"],\n",
+    "        route_start_lon, route_start_lat\n",
+    "    )\n",
+    "    dist_d = haversine_miles(\n",
+    "        d[\"lon\"], d[\"lat\"],\n",
+    "        route_end_lon, route_end_lat\n",
+    "    )\n",
+    "\n",
+    "    return dist_o <= max_dist_miles and dist_d <= max_dist_miles\n",
+    "\n",
+    "# =========================\n",
+    "# 4️⃣ MAIN LOOP OVER OD PAIRS\n",
+    "# =========================\n",
+    "\n",
+    "for ORIG_TRACT, DEST_TRACT in OD_PAIRS:\n",
+    "\n",
+    "    print(f\"\\n▶ Processing OD: {ORIG_TRACT} → {DEST_TRACT}\")\n",
+    "\n",
+    "    OUTPUT_STATS_JSON = f\"{ORIG_TRACT}_to_{DEST_TRACT}.stats.json\"\n",
+    "\n",
+    "    orig_poly = tracts.loc[tracts[\"GEOID\"] == ORIG_TRACT, [\"geometry\"]]\n",
+    "    dest_poly = tracts.loc[tracts[\"GEOID\"] == DEST_TRACT, [\"geometry\"]]\n",
+    "\n",
+    "    if orig_poly.empty or dest_poly.empty:\n",
+    "        print(\"  ⚠ Tract not found, skipped.\")\n",
+    "        continue\n",
+    "\n",
+    "    # origin filter\n",
+    "    gdf_o = gpd.GeoDataFrame(\n",
+    "        first_trips,\n",
+    "        geometry=gpd.points_from_xy(first_trips[\"orig_lon\"], first_trips[\"orig_lat\"]),\n",
+    "        crs=\"EPSG:4326\"\n",
+    "    )\n",
+    "    valid_o_ids = set(\n",
+    "        gpd.sjoin(gdf_o, orig_poly, predicate=\"within\")[\"linked_trip_id\"]\n",
+    "    )\n",
+    "\n",
+    "    # destination filter\n",
+    "    gdf_d = gpd.GeoDataFrame(\n",
+    "        last_trips,\n",
+    "        geometry=gpd.points_from_xy(last_trips[\"dest_lon\"], last_trips[\"dest_lat\"]),\n",
+    "        crs=\"EPSG:4326\"\n",
+    "    )\n",
+    "    valid_d_ids = set(\n",
+    "        gpd.sjoin(gdf_d, dest_poly, predicate=\"within\")[\"linked_trip_id\"]\n",
+    "    )\n",
+    "\n",
+    "    valid_ids = valid_o_ids & valid_d_ids\n",
+    "    gdf = df[df[\"linked_trip_id\"].isin(valid_ids)].copy()\n",
+    "\n",
+    "\n",
+    "    # =========================\n",
+    "    # 3.5️⃣ FILTER BAD LINKED TRIPS (CONSISTENT WITH VIS)\n",
+    "    # =========================\n",
+    "\n",
+    "    def linked_trip_ok(trip_df, max_dist_miles=1.0):\n",
+    "        \"\"\"\n",
+    "        trip_df: all rows of ONE linked_trip_id\n",
+    "        return True if ALL legs pass route-distance check\n",
+    "        \"\"\"\n",
+    "        for r in trip_df.itertuples():\n",
+    "            leg = {\n",
+    "                \"route\": r.route,          # 你可视化里用的 route\n",
+    "                \"origin\": {\n",
+    "                    \"lat\": r.orig_lat,\n",
+    "                    \"lon\": r.orig_lon\n",
+    "                },\n",
+    "                \"destination\": {\n",
+    "                    \"lat\": r.dest_lat,\n",
+    "                    \"lon\": r.dest_lon\n",
+    "                }\n",
+    "            }\n",
+    "            if not leg_route_distance_ok(leg, max_dist_miles):\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "    # 🔑 只保留“合法”的 linked_trip_id\n",
+    "    good_linked_ids = []\n",
+    "\n",
+    "    for lt_id, trip_df in gdf.groupby(\"linked_trip_id\"):\n",
+    "        if linked_trip_ok(trip_df, max_dist_miles=MAX_DIST_MILES):\n",
+    "            good_linked_ids.append(lt_id)\n",
+    "\n",
+    "    gdf = gdf[gdf[\"linked_trip_id\"].isin(good_linked_ids)].copy()\n",
+    "\n",
+    "    print(\"After route-distance filter:\")\n",
+    "    print(\"  linked trips:\", len(good_linked_ids))\n",
+    "    print(\"  rows:\", len(gdf))\n",
+    "\n",
+    "    if gdf.empty:\n",
+    "        stats = {\n",
+    "            \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
+    "            \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "            \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
+    "            \"counts\": {\"linked_trips\": 0},\n",
+    "            \"note\": \"No linked trips\"\n",
+    "        }\n",
+    "        with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+    "            json.dump(stats, f, indent=2)\n",
+    "        continue\n",
+    "\n",
+    "    # duration\n",
+    "    gdf[\"duration_min\"] = (\n",
+    "        gdf[\"local_datetime_end\"] - gdf[\"local_datetime_start\"]\n",
+    "    ).dt.total_seconds() / 60\n",
+    "\n",
+    "    trip_stats = (\n",
+    "        gdf.groupby(\"linked_trip_id\")\n",
+    "        .agg(\n",
+    "            total_duration=(\"duration_min\", \"sum\"),\n",
+    "            segments=(\"duration_min\", \"size\"),\n",
+    "            modes=(\"travel_mode\", lambda x: set(m.lower().strip() for m in x))\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    dur = trip_stats[\"total_duration\"].to_numpy()\n",
+    "    seg = trip_stats[\"segments\"].to_numpy()\n",
+    "    modes = trip_stats[\"modes\"].to_numpy()\n",
+    "\n",
+    "    stats = {\n",
+    "        \"schema\": \"nova.complete_trip.od_stats.v1\",\n",
+    "        \"generated_at\": datetime.utcnow().isoformat() + \"Z\",\n",
+    "        \"od\": {\"origin\": ORIG_TRACT, \"destination\": DEST_TRACT},\n",
+    "        \"counts\": {\"linked_trips\": int(len(dur))},\n",
+    "        \"trip_duration_min\": {\n",
+    "            \"min\": float(dur.min()),\n",
+    "            \"mean\": float(dur.mean()),\n",
+    "            \"median\": float(np.median(dur)),\n",
+    "            \"max\": float(dur.max())\n",
+    "        },\n",
+    "        \"segments\": {\n",
+    "            \"avg\": float(seg.mean()),\n",
+    "            \"max\": int(seg.max())\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    with open(OUTPUT_STATS_JSON, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(stats, f, indent=2)\n",
+    "\n",
+    "    print(\"  ✓ written:\", OUTPUT_STATS_JSON)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "446a91a0",
+   "metadata": {},
+   "source": [
+    "## Old version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a3f26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 283 2034  987  229   76   24   13   11    5    4    7    4    3    3\n",
+      "    1    2    1   12]\n"
      ]
     }
    ],
@@ -305,7 +634,7 @@
     "        \"car\": float(sum(\"car\" in m for m in modes) / len(modes)),\n",
     "        \"bus\": float(sum(\"bus\" in m for m in modes) / len(modes)),\n",
     "        \"rail\": float(sum(\"rail\" in m for m in modes) / len(modes)),\n",
-    "        \"walk\": float(sum(\"walk\" in m for m in modes) / len(modes))\n",
+    "        \"walk\": float(sum(\"walk/bike\" in m for m in modes) / len(modes))\n",
     "    },\n",
     "    \"travel_time_distribution\": travel_time_hist\n",
     "}\n",
@@ -314,25 +643,6 @@
     "    json.dump(stats, f, indent=2, allow_nan=False)\n",
     "\n",
     "print(\"Stats JSON written to:\", OUTPUT_STATS_JSON)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "63a3f26d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 283 2034  987  229   76   24   13   11    5    4    7    4    3    3\n",
-      "    1    2    1   12]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(hist_counts)\n"
    ]
   },
   {
